--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/boy1.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/boy1.jpeg" alt="">
             <h5>Saidkomilxon S.</h5>
             <p class="font-weight-light mb-0">"Qisqa vaqt ichida shuncha ma'lumotlarni o'rgandim."</p>
           </div>
