--- a/html_lesson1.html
+++ b/html_lesson1.html
@@ -69,12 +69,12 @@
       </nav>
 
       <div class="container-fluid">
-        <h1 class="mt-4">HTML | Kirish</h1>
-        <iframe width="854" height="480" src="https://www.youtube.com/embed/AweYjBPtpCI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1 class="mt-4">HTML darslari tez orada saytimizga joylanadi</h1>
+        <!-- <iframe width="854" height="480" src="https://www.youtube.com/embed/AweYjBPtpCI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur iusto dicta fugiat rerum qui quos culpa voluptas asperiores ipsam aliquid provident at, consectetur dolor sint ea? Expedita doloremque quidem dolores.</p>
         <br>
         <iframe width="854" height="480" src="https://mover.uz/video/embed/A9d39wTm/" frameborder="0" allowfullscreen></iframe>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur iusto dicta fugiat rerum qui quos culpa voluptas asperiores ipsam aliquid provident at, consectetur dolor sint ea? Expedita doloremque quidem dolores.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur iusto dicta fugiat rerum qui quos culpa voluptas asperiores ipsam aliquid provident at, consectetur dolor sint ea? Expedita doloremque quidem dolores.</p> -->
       </div>
 
 
