--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpeg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Mobil dasturlash</h2>
           <li class="lead mb-0">Swift</li>
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpeg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Xorijiy tillar</h2>
           <li class="lead mb-0">Ingliz tili</li>
@@ -145,7 +145,7 @@
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/boy1.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/boy1.jpeg" alt="">
             <h5>Saidkomilxon S.</h5>
             <p class="font-weight-light mb-0">"Qisqa vaqt ichida shuncha ma'lumotlarni o'rgandim."</p>
           </div>
